INTYG-2949: Fix utseende formly templates.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
@@ -1,6 +1,6 @@
 <div class="form-group form-inline row">
   <div class="col-md-6">
-    <label class="checkbox">
+    <label class="checkbox-inline big-checkbox-label">
         <input type="checkbox"
                class="big-checkbox"
                ng-model="formState[options.key].checked"
