--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -1,13 +1,13 @@
 <div class="form-group">
-	<label class="control-label inline-block checkbox checkbox-inline bold big-checkbox-label">
+	<label class="control-label inline-block checkbox-inline bold big-checkbox-label">
     <input type="checkbox" class="big-checkbox" ng-model="to.open">
-    <span dynamic-label key="{{to.label}}.RBK"></span>
-    <span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
+    <span dynamic-label key="FRG_{{to.frgId}}.RBK"></span>
+    <span wc-help-mark field-dynamic-help-text="FRG_{{to.frgId}}.HLP"></span>
   </label>
 	<div ng-if="to.open" class="fold-animation">
-		<label class="control-label inline-block" ng-class="{'bold' : to.bold}">
-        <span dynamic-label key="{{to.label}}.RBK"></span>
-        <span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span>
+		<label class="control-label inline-block webcert-top-padding-section" ng-class="{'bold' : to.bold}">
+        <span dynamic-label key="DFR_{{to.frgId}}.1.RBK"></span>
+        <span wc-help-mark field-dynamic-help-text="DFR_{{to.frgId}}.1.HLP"></span>
     </label>
 		<textarea id="{{options.key}}" name="{{options.key}}" rows='6' class='form-control' ng-model="model[options.key]"></textarea>
 	</div>
