--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -27,7 +27,13 @@
   <div ng-show="!viewState.common.activeErrorMessageKey" id="intyg-vy-laddad">
     <div class="print-hide">
       <div class="form-group">
-        <div wc-intyg-relations></div>
+        <div class="inline-block" style="margin-right:10px"
+             wc-intyg-patient-namn-personnummer
+             patient-name="viewState.intygModel.grundData.patient.fullstandigtNamn"
+             person-id="viewState.intygModel.grundData.patient.personId">
+
+        </div>
+        <span wc-intyg-relations></span>
       </div>
       <div class="form-group buttonbar">
         <div class="btn-row">
