--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
@@ -21,7 +21,7 @@
     <table>
         <tr>
             <th>
-                <span dynamic-label key="{{to.diagnosKodLabel}}.RBK"></span> *
+                <span dynamic-label key="{{to.diagnosKodLabel}}.RBK"></span>
                 <span ng-if="to.help" wc-help-mark field-dynamic-help-text="{{to.diagnosKodLabel}}.HLP"></span>
             </th>
             <th>
