--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -5,9 +5,9 @@
   </label>
   <table class="form-group">
     <tr class="underlagRow">
-      <th style="width: 35%;"><span dynamic-label key="{{to.typLabel}}.RBK"></span> <span wc-help-mark field-dynamic-help-text="{{to.typLabel}}.HLP"></span></th>
-      <th><span dynamic-label key="{{to.datumLabel}}.RBK"></span> <span wc-help-mark field-dynamic-help-text="{{to.datumLabel}}.HLP"></span></th>
-      <th><span dynamic-label key="{{to.hamtasFranLabel}}.RBK"></span> <span wc-help-mark field-dynamic-help-text="{{to.hamtasFranLabel}}.HLP"></span></th>
+      <th style="width: 35%;"><span dynamic-label key="{{to.typLabel}}.RBK"></span> *<span wc-help-mark field-dynamic-help-text="{{to.typLabel}}.HLP"></span></th>
+      <th><span dynamic-label key="{{to.datumLabel}}.RBK"></span><span wc-help-mark field-dynamic-help-text="{{to.datumLabel}}.HLP"></span></th>
+      <th><span dynamic-label key="{{to.hamtasFranLabel}}.RBK"></span> *<span wc-help-mark field-dynamic-help-text="{{to.hamtasFranLabel}}.HLP"></span></th>
     </tr>
     <tr class="underlagRow" ng-repeat="underlag in model.underlag">
       <td>
