INTYG-2949: CSS cleanup.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
@@ -33,7 +33,7 @@
         </tr>
         <tr class="diagnosRow" ng-repeat="diagnos in model[options.key]">
             <td>
-                <div class="input-group">
+                <div>
                     <input type="text" class="form-control" id="diagnoseCode-{{$index}}"
                            name="diagnoseCode{{$index}}"
                            value=""
