--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/headline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/headline.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline" ng-switch on="{{to.level}}">
+<div class="form-inline" ng-switch on="{{to.level}}">
   <h1 ng-switch-when="1" class="wc-headline-1 page-title">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     {{to.required ? '*' : ''}}
