INTYG-3085: Man kan nu kopiera makulerade intyg i frontend.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -102,7 +102,7 @@
                   intygstyp="{{intygstyp}}"
                   id="copyBtn"
                   class="btn btn-info"
-                  ng-if="!viewState.common.intygProperties.isRevoked && !viewState.common.isIntygOnRevokeQueue && !viewState.common.common.sekretessmarkering"
+                  ng-if="!viewState.common.common.sekretessmarkering"
                   ng-click="copy(viewState.intygModel)"
                   uib-popover="{{copyBtnTooltipText}}"
                   popover-trigger="mouseenter"
