INTYG-3126: Visa valideringsfel vid frågan i formlykomponenterna

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/boolean.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline">
+<div class="form-inline">
     <div>
         <label class="inline-block" ng-class="{'bold' : to.bold}">
             <span dynamic-label key="{{to.label}}.RBK"></span>
