--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkMultiText.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
 	<label class="control-label inline-block checkbox-inline bold big-checkbox-label">
     <input type="checkbox" class="big-checkbox" ng-model="to.open">
     <span dynamic-label key="FRG_{{to.frgId}}.RBK"></span>
