--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/date.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-group--small-gap form-horizontal row">
+<div class="form-horizontal row">
   <div class="col-md-6">
     <label class="checkbox-inline big-checkbox-label">
         <input type="checkbox"
