--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/label.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/label.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline">
+<div class="form-inline">
   <h4 class="">
     <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
     <span ng-if="to.staticLabel">{{to.staticLabel}}</span>
