--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/multiText.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group">
+<div>
     <label class="control-label inline-block" ng-class="{'bold' : to.bold}">
         <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
         <span ng-if="to.staticLabelId" message key="{{to.staticLabelId}}"></span>
