--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/patient-address-updater.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/patient-address-updater.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-{{to.formType}} row">
+<div class="form-{{to.formType}} row">
   <div class="col-md-{{to.labelColSize}} control-label">
     <label class="form-control-label"></label>
   </div>
