--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/radioGroup.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline">
+<div class="form-inline">
   <h3 dynamic-label key="{{to.label}}.RBK"><span wc-help-mark field-dynamic-help-text="{{to.label}}.HLP"></span></h3>
 
   <div data-ng-repeat="choice in to.choices">
