--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleDate.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline">
+<div class="form-inline">
   <div>
     <label class="form-control-label" ng-class="{'bold' : to.bold}">
       <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
