--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/utkast/wcField.directive.html
@@ -12,7 +12,7 @@
          field-dynamic-help-text="{{fieldDynamicHelpText}}"></div>
 
   </div>
-	<span class="intyg-block__content" ng-class="{unfilled: filled == 'false', fielderror: fieldHasErrors}">
+	<span class="intyg-block__content" ng-class="{unfilled: filled == 'false', categoryerror: fieldHasErrors}">
     <span class="intyg-field-blank" ng-hide="filled == 'true'"> <span message key="common.notset"></span></span>
 		<span ng-transclude ng-show="filled == 'true'"></span>
   </span>
