--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/fmb.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/fmb.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline" ng-class="to.panelClass">
+<div class="form-inline" ng-class="to.panelClass">
   <wc-fmb-help-display related-form-id="{{to.relatedFormId}}" diagnosis-code="fmbState.diagnosKod"
                        diagnosis-description="fmbState.diagnosBeskrivning" original-diagnosis-code="fmbState.originalDiagnoskod"
                        help-text-contents="fmbState.formData[to.helpTextContents]"></wc-fmb-help-display>
