--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleText.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-{{to.formType}} row" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
+<div class="form-{{to.formType}} row" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
   <div class="col-md-{{to.labelColSize}} control-label">
     <label class="form-control-label">
         <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
