--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleTextVertical.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/singleTextVertical.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group input-full" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
+<div class="input-full" ng-class="{'indent' : to.indent, 'bold' : to.bold}">
   <div class="control-label">
     <label class="form-control-label">
         <span ng-if="to.label" dynamic-label key="{{to.label}}.RBK"></span>
