--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/fk/wcViewIntygFields.directive.html
@@ -1,6 +1,6 @@
 <div>
   <div wc-field field-dynamic-label="KAT_{{group.templateOptions.category}}.RBK" ng-repeat="group in intygFields">
-    <div ng-repeat="field in group.fieldGroup" ng-if="!field.templateOptions.hideFromSigned" ng-class="{'intyg-field' : field.type != 'headline'}"
+    <div ng-repeat="field in group.fieldGroup" ng-if="!field.templateOptions.hideFromSigned && (!field.templateOptions.hideWhenEmpty || intygModel[field.key])" ng-class="{'intyg-field' : field.type != 'headline'}"
          ng-attr-id="{{field.key && 'form_'+field.key || undefined}}">
       <div wc-intyg-label="field.templateOptions.label" force-no-h5-after="field.templateOptions.noH5After" ng-attr-id="{{field.templateOptions.id && 'form_'+field.templateOptions.id || undefined}}"></div>
       <div ng-if="field.key" field-selective-view="field" field-model="intygModel">
@@ -58,7 +58,6 @@
               <h5><span dynamic-label key="{{field.templateOptions.hamtasFranLabel}}.RBK"></span></h5>
               <span id="{{field.key}}-{{$index}}-hamtasFran">{{underlag.hamtasFran}}</span>
             </div>
-            <span class="not-entered" ng-if="intygModel[field.key]"><span message key="common.notset"></span></span>
           </div>
           <div ng-switch-when="diagnos">
             <div ng-repeat="diagnos in intygModel[field.key]" class="intyg-block__subcontent">
