INTYG-3170: Hantera responsivitet så att tooltips inte försvinner utanför fönstret när skärm-/browserytan blir mindre.

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/intyg/intyg-header/intyg-header.html
@@ -107,7 +107,8 @@
                   uib-popover="{{copyBtnTooltipText}}"
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
-                  popover-append-to-body="true">
+                  popover-append-to-body="true"
+                  popover-placement="auto top">
             Kopiera
           </button>
           <button type="button"
@@ -121,7 +122,8 @@
                   uib-popover="{{fornyaBtnTooltipText}}"
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
-                  popover-append-to-body="true">
+                  popover-append-to-body="true"
+                  popover-placement="auto top">
             Förnya
           </button>
           <button type="button"
@@ -137,7 +139,8 @@
                   uib-popover="Makulerar intyget. Vid behov kan intyget ersättas med ett nytt."
                   popover-trigger="mouseenter"
                   popover-popup-delay="300"
-                  popover-append-to-body="true">
+                  popover-append-to-body="true"
+                  popover-placement="auto top">
             Makulera
           </button>
         </div>
