INTYG-3139: Förändringar LISU -> LISJP

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/sjukskrivningar.formly.html
@@ -13,8 +13,8 @@
       <span wc-help-mark field-dynamic-help-text="{{to.code}}.{{field}}.HLP"></span>
     </div>
     <div class="col-md-8">
-      från och med <span wc-date-period-field model="model" field="{{options.key}}" index="{{$index+1}}" type="from"></span>
-      till och med <span wc-date-period-field model="model" field="{{options.key}}" index="{{$index+1}}" type="tom"></span>
+      från och med <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="from"></span>
+      till och med <span wc-date-period-field model="model" field="{{options.key}}" index="{{field}}" type="tom"></span>
     </div>
   </div>
 </div>
