--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkboxInline.formly.html
@@ -1,6 +1,6 @@
 <div class="form-inline">
   <label class="checkbox checkbox-inline">
-    <input type="checkbox" class="big-checkbox" ng-model="model.kontaktMedFk">
+    <input type="checkbox" class="big-checkbox" ng-model="model[options.key]">
     <span dynamic-label key="{{to.label}}.RBK"></span>
   </label>
 </div>
