--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroupDescription.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/checkGroupDescription.formly.html
@@ -1,4 +1,4 @@
-<div class="form-group form-inline">
+<div class="form-group">
   <div>
     <label class="inline-block" ng-class="{'bold' : to.bold}">
       <span dynamic-label key="{{to.label}}.RBK"></span>
@@ -7,13 +7,13 @@
     </label>
   </div>
   <div data-ng-repeat="choice in to.choices">
-    <div>
+    <div class="form-inline">
       <label class="checkbox" ng-class="{disabled:to.disabled[choice.id]}">
         <input id="{{options.key}}-{{choice.id}}" type="checkbox" class="big-checkbox" ng-model="model[options.key][choice.id].checked" ng-disabled="to.disabled[choice.id]">
         <span dynamic-label key="{{to.code}}.{{choice.id}}.RBK"></span>
       </label>
       <span wc-help-mark field-dynamic-help-text="{{to.code}}.{{choice.id}}.HLP"></span>
-    <div>
+    </div>
     <div ng-if="model[options.key][choice.id].checked && choice.usesDescription" class="fold-animation">
       <label class="control-label inline-block" ng-class="{'bold' : to.bold}">
         <span dynamic-label key="{{to.descLabel}}.RBK"></span>
