INTYG-2960: Fixat field-type kopplingen till wc-field-validation direktivet som nu kör @-bindning

--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/diagnos.formly.html
@@ -79,5 +79,5 @@
             </td>
         </tr>
     </table>
-    <wc-field-validation field-type="options.type" validations="diagnosValidations"></wc-field-validation>
+    <wc-field-validation field-type="{{options.type}}" validations="diagnosValidations"></wc-field-validation>
 </div>
