--- a/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/webcert/gui/formly/underlag.formly.html
@@ -37,5 +37,5 @@
       </td>
     </tr>
   </table>
-  <wc-field-validation field-type="options.type" validations="underlagValidations"></wc-field-validation>
+  <wc-field-validation field-type="{{options.type}}" validations="underlagValidations"></wc-field-validation>
 </div>
