--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miIntygMainField.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/miIntygMainField.directive.html
@@ -5,10 +5,7 @@
     <div class="row">
       <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6">
         <h2 class="cert-title">
-          <span message key="certificatetypes.{{cert.typ}}.commonname"></span>
-                <span class="cert-titlebar-type">
-                  <span class="text-nowrap" message key="certificatetypes.{{cert.typ}}.typename"></span>
-                </span>
+          <span message key="{{cert.typ}}.label.certtitle"></span>
         </h2>
       </div>
       <div class="col-xs-6 col-sm-5 col-md-5 col-lg-5 issue">
