INTYG-3139: Visa bara sjukskrivningsperioder som är ifyllda

--- a/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/sjukskrivningView.directive.html
+++ b/web/src/main/resources/META-INF/resources/webjars/common/minaintyg/intyg/sjukskrivningView.directive.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div data-ng-repeat="grad in grader">
+  <div data-ng-repeat="grad in grader" ng-show="fieldModel[sjukskrivningView][grad]">
     <div class="col-xs-3">
       <span dynamic-label
             key="KV_FKMU_0003.{{fieldModel[sjukskrivningView][grad].sjukskrivningsgrad}}.RBK"></span>
